Protfolio page: add links of projects

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ h2 {
     background-color: #000000;
 }
 .about-me-container {
+    width: 650px;
     margin-left: 90px;
     margin-right: 90px;
     padding-bottom: 90px;
@@ -61,7 +62,12 @@ h2 {
     font-size: 14px;
     line-height: 24px;
     color: #000000;
-    padding-left: 20px;
+    padding-left: 0px;
+}
+
+.my-projects-list__item {
+    display: flex;
+    justify-content: space-between;
 }
 
 .i1,
@@ -75,17 +81,11 @@ h2 {
     position: relative;
 }
 
-.i1::before,
-.i2::before,
-.i3::before {
-    bottom: 9px;
-    content: "";
-    display: inline-block;
-    width: 250px;
-    height: 5px;
+.dashed {
+    flex-grow: 1;
+    height: 18px;
     border-bottom: 1px dashed #a8a8a8;
     margin-bottom: -3px;
-    left: -250px;
 }
 
 .i1::before {
@@ -188,6 +188,8 @@ aside {
 
 .my-photo {
     margin-top: 40px;
+    width: 100%;
+    height: auto;
 }
 
 aside div {
