--- a/Convert/scss/styles.scss
+++ b/Convert/scss/styles.scss
@@ -592,6 +592,9 @@
     @media screen and (max-width: 1024px) {
         width: 768px;
     }
+    @media screen and (max-width: 768px) {
+        width: 480px;
+    }
     &__copy {
         text-align: center;
         @include text-primary;
